fix autocompletion add whitespaces to grammar

--- a/src/main/resources/VAADIN/themes/mytheme/styles.scss
+++ b/src/main/resources/VAADIN/themes/mytheme/styles.scss
@@ -7,6 +7,8 @@
 .autocomplete {
   .autocomplete-select {
      overflow: hidden !important;
-     font-size: 13px;
+     font-size: 15px;
+     width: 200px;
+     padding: 5px;
    }
   } 
